# LLML

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md
.claude/: settings.json
.claude/agents/: compiler-debugger.md  llml-reviewer.md  project-reviewer.md  spec-validator.md  test-generator.md
.claude/commands/: add-test.md  check-all.md  parse-debug.md  pr-merge.md  pr.md  run-llml.md  test-conformance.md  token-compare.md
.github/workflows/: ci.yml  release.yml
crates/llml-cli/: Cargo.toml
crates/llml-cli/src/: main.rs  repl.rs
crates/llml-cli/tests/: conformance.rs
crates/llml-interp/: Cargo.toml
crates/llml-interp/src/: eval.rs  lib.rs  value.rs
crates/llml-lexer/: Cargo.toml
crates/llml-lexer/src/: lib.rs  token.rs
crates/llml-parser/: Cargo.toml
crates/llml-parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/llml-stdlib/: Cargo.toml
crates/llml-stdlib/src/: io.rs  lib.rs  math.rs  registry.rs  str.rs  value.rs
crates/llml-types/: Cargo.toml
crates/llml-types/src/: checker.rs  context.rs  errors.rs  lib.rs  types.rs
crates/llml-vm/: Cargo.toml
crates/llml-vm/src/: bytecode.rs  compiler.rs  lib.rs  limits.rs  trace.rs  vm.rs
docs/: examples.md  installation.md  llm-guide.md  llm-integration.md  llml-reference-card.md  roadmap.md
examples/: expr_eval.llml  fibonacci.llml  hello.llml  higher_order.llml  llm_generated.llml
tests/conformance/: adt_prod.expected  adt_prod.llml  adt_sum.expected  adt_sum.llml  basic_bool.llml  basic_float.expected  basic_float.llml  basic_int.expected  basic_int.llml  basic_string.expected  basic_string.llml  comparison.expected  comparison.llml  do_block.expected  do_block.llml  early_return.expected  early_return.llml  expr_evaluator.expected  expr_evaluator.llml  factorial.llml  function_higher_order.expected  function_higher_order.llml  function_recursive.llml  function_simple.llml  if_expr.expected  if_expr.llml  let_binding.expected  let_binding.llml  match_constructor.llml  match_simple.expected  match_simple.llml  mut_binding.expected  mut_binding.llml  negation.expected  negation.llml  nested_expr.expected  nested_expr.llml  set_mutation.expected  set_mutation.llml  string_equality.llml  (+4 more)
