[workspace]
members = [
    "crates/llml-lexer",
    "crates/llml-parser",
    "crates/llml-stdlib",
    "crates/llml-interp",
    "crates/llml-types",
    "crates/llml-vm",
    "crates/llml-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
logos = "0.15"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "15"
datatest-stable = "0.3"
