[package]
name = "llml-vm"
version.workspace = true
edition.workspace = true

[dependencies]
llml-lexer = { path = "../llml-lexer" }
llml-parser = { path = "../llml-parser" }
llml-stdlib = { path = "../llml-stdlib" }
thiserror.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
